# diploma

./: .gitignore  docker-compose.yaml
backend/: .env  Cargo.toml
backend/migrations/: 001_initial.sql
backend/src/: auth.rs  config.rs  errors.rs  handlers.rs  main.rs  ml_client.rs  models.rs  repository.rs  services.rs
frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: api.rs  main.rs  models.rs
frontend/src/pages/: login.rs  mod.rs  tasks.rs
ml_service/: Dockerfile  main.py  requirements.txt
