[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12"
anyhow = "1.0.100"
chrono = {version = "0.4.43", features = ["serde"]}
dotenvy = "0.15.7"
jsonwebtoken = "10.3.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
sqlx = {version = "0.8.6", features = ["sqlite", "chrono", "runtime-tokio"]}
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

shared = {path = "../shared"}