[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1"
gloo-storage = "0.3"
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Storage"] }